# xgc2-swarm-ros-bridge

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: ci.yml  release.yml
.xgc2/: product.yml
.xgc2/scripts/: build_debs_in_docker.sh  check_installed_packages.sh  package_debs.sh  publish_apt_repo.sh
include/: bridge_node.hpp
src/: bridge_node.cpp
test/: bridge_lifecycle_test.py
